--- a/index.html
+++ b/index.html
@@ -151,14 +151,14 @@
             </div>
             <div class="col-md-4">
                 <h5>Contact Information</h5>
-                <p><i class="fas fa-map-marker-alt"></i> 123 Nairobi Street, Nairobi, Kenya</p>
-                <p><i class="fas fa-phone-alt"></i> +254 700 000 000</p>
-                <p><i class="fas fa-envelope"></i> info@midaver.com</p>
+                <p><i class="fas fa-map-marker-alt"></i>King Plaza Nairobi, Kenya</p>
+                <p><i class="fas fa-phone-alt"></i> +254 101616166</p>
+                <p><i class="fas fa-envelope"></i> midaverinvestment@gmail.com</p>
             </div>
             <div class="col-md-4">
                 <h5>Follow Us</h5>
                 <div class="social-icons">
-                    <a href="#" target="_blank"><i class="fab fa-facebook-f"></i></a>
+                    <a href="" target="_blank"><i class="fab fa-facebook-f"></i></a>
                     <a href="#" target="_blank"><i class="fab fa-twitter"></i></a>
                     <a href="#" target="_blank"><i class="fab fa-instagram"></i></a>
                     <a href="#" target="_blank"><i class="fab fa-linkedin-in"></i></a>
