--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
     </section>
 
 <!-- Floating WhatsApp Button -->
-<a href="https://wa.me/25401616166" target="_blank" class="whatsapp-btn">
+<a href="https://wa.me/+254101616166" target="_blank" class="whatsapp-btn">
     <i class="fab fa-whatsapp"></i>
 </a>
 
