--- a/contact.html
+++ b/contact.html
@@ -53,7 +53,8 @@
     <section class="py-5">
         <div class="container">
             <h1 class="text-center mb-4">Get in touch</h1>
-            <form>
+            <form action="https://api.web3forms.com/submit" method="POST">
+                <input type="hidden" name="access_key" value="7ab1e69b-881c-49c2-8a41-28111d2d554a">
                 <div class="form-group">
                     <label for="name">Full Name</label>
                     <input type="text" id="name" class="form-control" placeholder="Your Name">
