--- a/application.html
+++ b/application.html
@@ -9,6 +9,38 @@
     <!-- FontAwesome Icons -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <style>
+        /* Sidebar Style */
+        #sidebar {
+            position: fixed;
+            top: 0;
+            left: -250px;
+            width: 250px;
+            height: 100%;
+            background-color: navy;
+            color: #fff;
+            transition: left 0.3s ease;
+        }
+        #sidebar a {
+            display: block;
+            padding: 15px;
+            text-decoration: none;
+            color: white;
+            font-size: 18px;
+        }
+        #sidebar a:hover {
+            background-color: #f90;
+        }
+        /* Close button */
+        #closeSidebar {
+            font-size: 30px;
+            position: absolute;
+            top: 20px;
+            right: 25px;
+            color: white;
+            cursor: pointer;
+        }
+    </style>
 </head>
 <body>
    <!-- Sidebar Menu -->
@@ -39,26 +71,12 @@
     </div>
 </nav>
 
-<!-- Sidebar -->
-<div id="sidebar">
-    <span class="close-btn" id="closeSidebar">&times;</span>
-    <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">How it Works</a></li>
-        <li><a href="loan_types.html">Loan Types</a></li>
-        <li><a href="contact.html">Contact</a></li>
-        <li><a href="application.html">Apply Now</a></li>
-    </ul>
-</div>
-
-
     <!-- Application Form Section -->
     <section class="apply-now py-5">
         <div class="container">
             <h2 class="text-center mb-4">Loan Application Form</h2>
             <p class="text-center text-muted mb-5">Fill out the form below to apply for a loan. We'll review your application and get back to you promptly.</p>
-            <form action="https://api.web3forms.com/submit" method="POST">
-                <input type="hidden" name="access_key" value="7ab1e69b-881c-49c2-8a41-28111d2d554a">
+            <form action="submit_application.php" method="POST" class="bg-light p-4 rounded shadow-sm">
                 <div class="form-group">
                     <label for="fullName">Full Name</label>
                     <input type="text" class="form-control" id="fullName" name="fullName" placeholder="Enter your full name" required>
@@ -117,7 +135,7 @@
             <div class="col-md-4">
                 <h5>Contact Information</h5>
                 <p><i class="fas fa-map-marker-alt"></i> 123 Nairobi Street, Nairobi, Kenya</p>
-                <p><i class="fas fa-phone-alt"></i> +254 700 000 000</p>
+                <p><i class="fas fa-phone-alt"></i> +254 101616166</p>
                 <p><i class="fas fa-envelope"></i> info@midaver.com</p>
             </div>
             <div class="col-md-4">
@@ -144,11 +162,11 @@
     <script>
         // Sidebar toggle script
         document.getElementById('hamburgerBtn').addEventListener('click', function() {
-            document.getElementById('sidebar').style.left = '0';
+            document.getElementById('sidebar').style.left = '0'; // Show sidebar
         });
-    
+
         document.getElementById('closeSidebar').addEventListener('click', function() {
-            document.getElementById('sidebar').style.left = '-250px';
+            document.getElementById('sidebar').style.left = '-250px'; // Hide sidebar
         });
     </script>
 </body>
