--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
 <body>
     <!-- Navbar -->
  <nav class="navbar navbar-expand-md navbar-dark py-3">
-    <a class="navbar-brand" href="#"><b>Midaver Investment Kenya Ltd</b></a>
+    <a class="navbar-brand" href="#"><img src="images/logomain.png" alt="" width="150px"></a>
     <button class="navbar-toggler" type="button" aria-controls="navbarNav" aria-expanded="false"
         aria-label="Toggle navigation" id="hamburgerBtn">
         <span class="navbar-toggler-icon"></span>
